[tool.poetry]
name = "olympus-messaging"
version = "0.0.0"
description = ""
authors = ["Chris Latham <cl@bink.com>"]
readme = "README.md"
packages = [{include = "olympus_messaging"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^24.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
xenon = "^0.9.0"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"example.py" = ["ALL"]
